[gd_scene load_steps=20 format=3 uid="uid://u4xrbxhxkrly"]

[ext_resource type="Script" path="res://enemies/default snowman/default_snowman.gd" id="1_6cqjf"]
[ext_resource type="Texture2D" uid="uid://bjq0j3qhho4ct" path="res://enemies/default snowman/assets/walk/1.png" id="1_rwph1"]
[ext_resource type="Texture2D" uid="uid://t3u20m2511gf" path="res://enemies/default snowman/assets/walk/2.png" id="2_ei7kr"]
[ext_resource type="Texture2D" uid="uid://hwsdudslnmc7" path="res://enemies/default snowman/assets/attack/1.png" id="2_tfs3p"]
[ext_resource type="Texture2D" uid="uid://comq65k63ru1b" path="res://enemies/default snowman/assets/walk/3.png" id="3_16mes"]
[ext_resource type="Texture2D" uid="uid://bmbfjdfvwejlw" path="res://enemies/default snowman/assets/attack/2.png" id="3_ccemr"]
[ext_resource type="Texture2D" uid="uid://br0dnim80j6dl" path="res://enemies/default snowman/assets/attack/3.png" id="4_f6sxj"]
[ext_resource type="Texture2D" uid="uid://bxp2i84mieehw" path="res://enemies/default snowman/assets/walk/4.png" id="4_x8xy0"]
[ext_resource type="Texture2D" uid="uid://d4etc0sqmwire" path="res://enemies/default snowman/assets/attack/4.png" id="5_jjndc"]
[ext_resource type="Texture2D" uid="uid://rwqsftfad54j" path="res://enemies/default snowman/assets/attack/last.png" id="6_mcgqi"]
[ext_resource type="Texture2D" uid="uid://cj023bta5yp28" path="res://enemies/default snowman/assets/death/1.png" id="7_abv6r"]
[ext_resource type="Texture2D" uid="uid://beugcjxa3ovyu" path="res://enemies/default snowman/assets/attack/4e.png" id="7_dn24t"]
[ext_resource type="Texture2D" uid="uid://bhgv4nama7a73" path="res://enemies/default snowman/assets/death/2.png" id="8_cfpmf"]
[ext_resource type="Texture2D" uid="uid://cnmmpga8gv62o" path="res://enemies/default snowman/assets/death/3.png" id="9_sdlrs"]
[ext_resource type="Texture2D" uid="uid://buxfqtppxmr5e" path="res://enemies/default snowman/assets/death/4.png" id="10_43t7h"]
[ext_resource type="Texture2D" uid="uid://shytssrconqp" path="res://enemies/default snowman/assets/death/5.png" id="11_2jel2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2oncs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tfs3p")
}, {
"duration": 1.0,
"texture": ExtResource("3_ccemr")
}, {
"duration": 3.0,
"texture": ExtResource("4_f6sxj")
}, {
"duration": 5.0,
"texture": ExtResource("5_jjndc")
}, {
"duration": 5.0,
"texture": ExtResource("6_mcgqi")
}, {
"duration": 1.0,
"texture": ExtResource("7_dn24t")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_abv6r")
}, {
"duration": 1.0,
"texture": ExtResource("8_cfpmf")
}, {
"duration": 1.0,
"texture": ExtResource("9_sdlrs")
}, {
"duration": 20.0,
"texture": ExtResource("10_43t7h")
}, {
"duration": 1.0,
"texture": ExtResource("11_2jel2")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rwph1")
}, {
"duration": 1.0,
"texture": ExtResource("2_ei7kr")
}, {
"duration": 1.0,
"texture": ExtResource("3_16mes")
}, {
"duration": 1.0,
"texture": ExtResource("4_x8xy0")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e475c"]
size = Vector2(40, 63)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u62m7"]
radius = 13.0
height = 26.0

[node name="DefaultSnowman" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 34
script = ExtResource("1_6cqjf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_2oncs")
animation = &"attack"
autoplay = "walk"

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(12, 0)
shape = SubResource("RectangleShape2D_e475c")

[node name="FloorDetection" type="RayCast2D" parent="."]
position = Vector2(56, 0)
target_position = Vector2(0, 48)
collision_mask = 2

[node name="PlayerDetection" type="RayCast2D" parent="."]
position = Vector2(16, 0)
target_position = Vector2(176, 0)
collision_mask = 33

[node name="WallDetection" type="RayCast2D" parent="."]
target_position = Vector2(40, 0)
collision_mask = 32

[node name="HitArea" type="Area2D" parent="."]
position = Vector2(24, 0)
collision_layer = 16
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CapsuleShape2D_u62m7")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_hit_area_body_exited"]
